--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint": "^9.5.0",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
